--- a/HTMLPage.html
+++ b/HTMLPage.html
@@ -6,8 +6,10 @@
     <title></title>
 </head>
 <body>
-    <h1>Zagolovok</h1>
-    <p>Text paragraf</p>
-    <p>New text for new branch</p>
+    <section>
+        <h1>Zagolovok</h1>
+        <p>Text paragraf</p>
+        <p>New text for new branch</p>
+    </section>
 </body>
 </html>
